Wrapping up final changes and bugs
• Mavericks Header
• 32x32 (retina) favicon
• @1x darker app brand description
• @1x darker app features descriptions
• @1x seperator, also darker for older color profile screens
• @1x learn more button
• @1x darker footer brand description
• @1x darker footer profiles (names)

--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ body {
 	width: 200px;
 	margin-left: 25px;
 	font-size: 14px;
-	color: #9da1a7;
+	color: #8a8f96;
 	margin-top: 8px;
 	line-height: 1.4;
 }
@@ -142,7 +142,7 @@ body {
 	width: 200px;
 	margin-left: 377px;
 	font-size: 14px;
-	color: #9da1a7;
+	color: #8a8f96;
 	margin-top: 8px;
 		line-height: 1.4;
 }
@@ -189,7 +189,7 @@ body {
 	width: 200px;
 	margin-left: 732px;
 	font-size: 14px;
-	color: #9da1a7;
+	color: #8a8f96;
 	margin-top: 8px;
 	line-height: 1.4;
 }
@@ -232,7 +232,7 @@ body {
 	width: 200px;
 	margin-left: 25px;
 	font-size: 14px;
-	color: #9da1a7;
+	color: #8a8f96;
 	margin-top: 8px;
 	line-height: 1.4;
 }
@@ -277,7 +277,7 @@ body {
 	width: 200px;
 	margin-left: 377px;
 	font-size: 14px;
-	color: #9da1a7;
+	color: #8a8f96;
 	margin-top: 8px;
 	line-height: 1.4;
 }
@@ -323,7 +323,7 @@ body {
 	width: 200px;
 	margin-left: 732px;
 	font-size: 14px;
-	color: #9da1a7;
+	color: #8a8f96;
 	margin-top: 8px;
 	line-height: 1.4;
 }
@@ -374,7 +374,7 @@ body {
 	width: 640px;
 	margin-left: 170px;
 	font-size: 15px;
-	color: #9da1a7;
+	color: #8a8f96;
 	margin-top: 24px;
 	line-height: 1.5;
 }
@@ -410,7 +410,7 @@ body {
 	width: 640px;
 	margin-left: 167px;
 	font-size: 15px;
-	color: #9da1a7;
+	color: #8a8f96;
 	margin-top: 24px;
 	line-height: 1.5;
 }
@@ -446,7 +446,7 @@ body {
 	width: 640px;
 	margin-left: 167px;
 	font-size: 15px;
-	color: #9da1a7;
+	color: #8a8f96;
 	margin-top: 24px;
 	line-height: 1.5;
 }
@@ -483,7 +483,7 @@ body {
 	width: 640px;
 	margin-left: 167px;
 	font-size: 15px;
-	color: #9da1a7;
+	color: #8a8f96;
 	margin-top: 24px;
 	line-height: 1.5;
 	margin-bottom: 62px;
@@ -513,7 +513,7 @@ body {
 	width: 640px;
 	margin-left: 167px;
 	font-size: 15px;
-	color: #9da1a7;
+	color: #8a8f96;
 	margin-top: 24px;
 	line-height: 1.5;
 	margin-bottom: 62px;
@@ -543,7 +543,7 @@ body {
 	width: 640px;
 	margin-left: 167px;
 	font-size: 15px;
-	color: #9da1a7;
+	color: #8a8f96;
 	margin-top: 24px;
 	line-height: 1.5;
 	margin-bottom: 62px;
@@ -613,13 +613,13 @@ body {
 }
 
 #christian .about {
-	color: #bebebe;
+	color: #a3a3a3;
 	margin-left: 40px;
 	margin-top: 20px;
 }
 
 #christian .about a {
-	color: #767676;
+	color: #5a5a5a;
 	text-decoration: none;
 }
 
@@ -648,13 +648,13 @@ body {
 }
 
 #indragie .about {
-	color: #bebebe;
+	color: #a3a3a3;
 	margin-left: 40px;
 	margin-top: 20px;
 }
 
 #indragie .about a {
-	color: #767676;
+	color: #5a5a5a;
 	text-decoration: none;
 }
 
@@ -701,7 +701,7 @@ and (max-device-width : 568px) {
 }
 
 #christian .about {
-	color: #bebebe;
+	color: #a3a3a3;
 	margin-left: 40px;
 	margin-top: 20px;
 	font-size: 10px;
